# archidemio

./: CMakeCPack.cmake  CMakeLists.txt  Description.txt  README.md
archidemio/: CMakeLists.txt  Description.txt  Readme.txt
archidemio/R/: archidemio_fonctions_new.R  archidemio_simulation_yam_new.r  estimation.R  voisinage.R
archidemio/data/: MTP_2001.txt  meteo_PB_2010.txt  yam_ScoreArea_2010.csv
archidemio/exp/: 1D.vpz  2D.vpz  output.vpz  yam.vpz
archidemio/metadata/exp/: 1D.vpm  2D.vpm  yam.vpm
archidemio/metadata/src/: Unit.sm
archidemio/src/: CMakeLists.txt  CropClimate.cpp  CropLeafArea.cpp  CropPhenology.cpp  GraphTranslator.cpp  GraphTranslator.hpp  InConnector.cpp  Initialization.cpp  Unit.cpp  UnitPilot.cpp  UnitPilotGraph.cpp
archidemio_test/: CMakeLists.txt  Description.txt  Readme.txt
archidemio_test/data/: test_non_regression.txt
archidemio_test/test/: test_archidemio.cpp
cmake/: FindEigen2.cmake
data/: 2001_MTP_A.txt  2001_MTP_A.txt~  CMakeLists.txt  MTP_2001.ods  Meteo.txt  Meteo.txt~  PB_2010.txt  RHE_2010.txt
data/observation/: severity_2010.csv
doc/: CMakeLists.txt
exp/: 1D_0.7.vpz  1D_0.8.vpz  1D_0.9.vpz  2D_0.7.vpz  2D_0.8.vpz  2D_0.8_IA.vpz  2D_0.8_NG.vpz  2D_0.9.vpz  archidemio_0.4.vpz  archidemio_0.5.vpz  archidemio_0.6.vpz  archidemio_0.6a.vpz  archidemio_0.6b.vpz  pea.vpz  plan.vpz  potato.vpz  yam.vpz
exp/archive/: 1D_0.7.vpz  2D_0.7.vpz  archidemio.vpz  archidemio_0.1.vpz  archidemio_0.2.vpz  archidemio_0.3.vpz  archidemio_0.5.vpz  archidemio_0.6b.vpz
exp/bench/: bench_1.vpz  bench_2.vpz  bench_3.vpz  bench_4.vpz  bench_5.vpz
output/: Neighbour_4.graphml  Output.R  analyse.R  analyse_generic.R  analyse_sensibilite.R  application_igname.R  archidemio_analyse.R  archidemio_analyse_generic.R  archidemio_analyse_igname.R  archidemio_analyse_pdt.R  archidemio_analyse_pois.R  archidemio_analyse_sensibilite.R  archidemio_dispersion.R  archidemio_estimation.R  archidemio_fonctions.R  dispersion.R  exp_vueCropPhenology.csv  fonctions.R  output.vpz  tests.R  voisinage.R
output/tools/: G.graphml  voisinage.R
src/: Buffer.cpp  CMakeLists.txt  Connector.cpp  Constructor.cpp  CropClimate.cpp  CropLeafArea.cpp  CropPhenology.cpp  CropState.cpp  ExecutiveFSA.cpp  ExecutiveGraph.cpp  GraphTranslator.cpp  GraphTranslator.hpp  Initiation.cpp  Pilot.cpp  PilotFSA.cpp  PilotGraph.cpp  Pilote.cpp  PiloteGraph.cpp  PiloteNG.cpp  Unit.cpp  UnitConstruction.cpp  UnitConstructionGen.cpp  UnitConstructionGenNG.cpp  UnitConstructionGrid.cpp  UnitLeafArea.cpp  UnitPathogen.cpp  UnitPhenology.cpp  Unit_0.2.cpp  Unit_0.5.cpp  passive.cpp  test.cpp
