INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src
  ${VLE_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${VLE_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

ADD_LIBRARY(CropPhenology SHARED CropPhenology.cpp)
ADD_LIBRARY(CropClimate SHARED CropClimate.cpp)
ADD_LIBRARY(CropLeafArea SHARED CropLeafArea.cpp)
ADD_LIBRARY(Unit SHARED Unit.cpp)
ADD_LIBRARY(Initiation SHARED Initiation.cpp)
ADD_LIBRARY(UnitConstruction SHARED UnitConstruction.cpp)
ADD_LIBRARY(Pilote SHARED Pilote.cpp)
ADD_LIBRARY(Buffer SHARED Buffer.cpp)

TARGET_LINK_LIBRARIES(CropPhenology
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(CropClimate
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(CropLeafArea
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(Unit
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(Initiation
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(UnitConstruction
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(Pilote
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(Buffer
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 
  
INSTALL(TARGETS CropPhenology
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS CropClimate
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS CropLeafArea
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Unit
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Initiation
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS UnitConstruction
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Pilote
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Buffer
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
