INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src
  ${VLE_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${Eigen2_INCLUDE_DIR})

LINK_DIRECTORIES(
  ${VLE_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})
  
ADD_LIBRARY(passive SHARED passive.cpp)
ADD_LIBRARY(CropPhenology SHARED CropPhenology.cpp)
ADD_LIBRARY(CropClimate SHARED CropClimate.cpp)
ADD_LIBRARY(CropLeafArea SHARED CropLeafArea.cpp)
ADD_LIBRARY(Unit SHARED Unit.cpp)
ADD_LIBRARY(Initiation SHARED Initiation.cpp)
ADD_LIBRARY(Pilote SHARED PiloteNG.cpp)
ADD_LIBRARY(Constructor SHARED Constructor.cpp
  GraphTranslator.hpp GraphTranslator.cpp)
ADD_LIBRARY(Connector SHARED Connector.cpp)
ADD_LIBRARY(CropState SHARED CropState.cpp)

TARGET_LINK_LIBRARIES(passive
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(CropPhenology
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(CropClimate
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(CropLeafArea
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(Unit
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(Initiation
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(Pilote
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(Constructor
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(Connector
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(CropState
  ${VLE_LIBRARIES}
  ${Boost_LIBRARIES})
  
INSTALL(TARGETS passive
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS CropPhenology
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS CropClimate
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS CropLeafArea
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Unit
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Initiation
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Pilote
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Constructor
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS Connector
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(TARGETS CropState
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
